# all-thing-eye

./: .dockerignore  .gitignore  ACTIVITIES_LIST_REFACTORING.md  AGENTS.md  CLAUDE.md  COLLECTOR_STATUS_TRACKING.md  DEBUG_AWS_502.md  DEPLOYMENT_QUICKSTART.md  Dockerfile.backend  Makefile  QUICKSTART_WEB.md  README.md  README_DOCKER.md  SLACK_ANNOUNCEMENT.md  check_github_team_slug.sh  check_notion_content.py  check_projects_graphql.sh  check_projects_repos.py  check_slack_quick.py  check_slack_token.py  check_slack_users.py  docker-compose.prod.yml  docker-compose.yml  env.production.template  fix_cursor_zsh.sh  fix_cursor_zsh_v2.sh  pyproject.toml  requirements.txt  test_graphql_recordings_daily.sh  test_recordings_daily_query.py
.omc/: continuation-count.json
.sisyphus/: boulder.json
backend/: __init__.py  main.py  main_mongo.py
config/: config.yaml  members.csv  members.example.yaml  members.yaml
docker/: Dockerfile  docker-compose.yaml
docs/: ADMIN_MANAGEMENT.md  ADMIN_QUICK_REFERENCE.md  API_DEVELOPMENT.md  ARCHITECTURE.md  AWS_DAILY_COLLECTION_DEBUG.md  AWS_DATA_COLLECTION_GUIDE.md  AWS_DEPLOYMENT.md  AWS_DEPLOYMENT_GUIDE.md  COLLABORATION_SCORING.md  CUSTOM_EXPORT_SPEC.md  DASHBOARD_COMPLETION_REPORT.md  DASHBOARD_REDESIGN.md  DATABASE_SCHEMA.md  DATA_GUIDE_FOR_AI.md  DEPLOYMENT_SUMMARY.md  DOCKER_REBUILD_GUIDE.md  DRIVE_CONTENT_DIFFS_PIPELINE.md  ENV_SETUP.md  FRONTEND_API_ARCHITECTURE.md  GITHUB_SETUP.md  GOOGLE_DRIVE_SETUP.md  GRAPHQL_ACTIVITIES_FULL_MIGRATION.md  GRAPHQL_MIGRATION_PLAN.md  GRAPHQL_PHASE2_TESTING.md  GRAPHQL_PHASE3_FRONTEND.md  GRAPHQL_PHASE4_MIGRATION.md  GRAPHQL_QUICKSTART.md  IMPLEMENTATION_PLAN.md  ISSUE_AUTOMATION.md  MCP_INTEGRATION.md  MEMBER_MANAGEMENT.md  MONGODB_COMPLETE_SCHEMA.md  MONGODB_EVALUATION_GUIDE.md  MONGODB_PROTOTYPE_GUIDE.md  MONGODB_SCHEMA.md  NOTION_SETUP.md  ONBOARDING_BOT_IDEA.md  PROGRESS_SUMMARY.md  PROJECT_MAPPING_DATA.md  PROJECT_STRUCTURE.md  (+12 more)
frontend/: .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
mcp_server/: __init__.py  config.json  server.py
nginx/: nginx.conf  nginx.prod.conf
reports/: project_ooo_weekly_report_2025W44.md  project_ooo_weekly_report_2025W44_v2.md  project_ooo_weekly_report_2025W44_v2_ko.md  project_ooo_weekly_report_2025W44_v3_ko.md  slack_analysis_2025W45.md
scripts/: add_member_id_to_activities.py  audit_github_permissions.py  backfill_ecosystem_data.py  backup_mongodb.py  backup_mongodb_to_collection.py  backup_mongodb_to_s3.py  benchmark_mongo_vs_sql.py  build_confirmed_email_map.py  build_identity_map.py  build_member_index_mongo.py  build_member_registry.py  check_ale_pr_authors.py  check_ale_reviews.py  check_aws_logs.sh  check_collab_data.py  check_collector_logs.sh  check_data_date_range.py  check_data_structure.py  check_ecosystem_db.py  check_github_members.py  check_mongo_collections.py  check_mongo_data.py  check_notion_comments.py  check_notion_pages.py  check_pr_reviews.py  check_pr_structure.py  check_project_repositories.py  check_projects.py  (+89 more)
(+199 files in other folders)
